ran until compute_psd.plot()

--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -949,7 +949,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "data1_sss.compute_psd(fmax=60, n_fft=1000).plot();"
+    "raw1_sss.compute_psd(fmax=60, n_fft=1000).plot()"
    ]
   },
   {
