--- a/MNEPython/ApplyingMaxFilter.ipynb
+++ b/MNEPython/ApplyingMaxFilter.ipynb
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "bids_path = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix='meg', extension='.fif', root=bids_root)\n",
     "\n",
-    "deriv_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing'\n",
+    "deriv_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing'  # output path\n",
     "\n",
     "deriv_path = BIDSPath(subject=subject, session=session, datatype='meg',\n",
     "            task=task, run=run, suffix='meg', root=deriv_root).mkdir()\n",
@@ -918,7 +918,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -965,47 +965,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
-    "Save the result in a FIF-file. The result_path below is specific to your own setup:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Warning:<br />\n",
-    "    </b> If you are using MNE-Python < 1.0, run the code below before saving the SSS data. This will fix an issue with the formatting of the subject information preventing the new data to be saved. \n",
-    "    <br /> <br />\n",
-    "    <code>data1_sss.info['subject_info']['weight'] = None  \n",
-    " data1_sss.info['subject_info']['height'] = None</div>"
+    "Save the result in a FIF-file:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Overwriting existing file.\n",
-      "Writing /Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
-      "Closing /Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
-      "[done]\n"
+      "Writing /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
+      "Closing /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n"
      ]
     }
    ],
    "source": [
-    "data1_sss.save(deriv_file_1, overwrite=True) "
+    "raw1_sss.save(deriv_file_1, overwrite=True) "
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To complete the procedure perform the noise reduction procedure for the remaining sub-file. They will be stored in the result_path:"
+    "To complete the procedure perform the noise reduction procedure for the remaining sub-file. They will be stored in the derivatives folder:"
    ]
   },
   {
@@ -1072,18 +1057,17 @@
    "source": [
     "bids_path.update(run='02')\n",
     "print(bids_path.basename)\n",
-    "data2 = read_raw_bids(bids_path=bids_path, \n",
+    "raw2 = read_raw_bids(bids_path=bids_path, \n",
     "                      extra_params={'preload':True},\n",
     "                      verbose=True)\n",
-    "data2.info['bads'].extend(auto_noisy_chs + auto_flat_chs)\n",
-    "data2.fix_mag_coil_types()\n",
-    "data2_sss = mne.preprocessing.maxwell_filter(data2,\n",
+    "raw2.info['bads'].extend(auto_noisy_chs + auto_flat_chs)\n",
+    "raw2.fix_mag_coil_types()\n",
+    "raw2_sss = mne.preprocessing.maxwell_filter(raw2,\n",
     "                                             cross_talk=crosstalk_file,                                          \n",
     "                                             calibration=calibration_file,\n",
     "                                             verbose=True)\n",
-    "# data2_sss.info['subject_info']['weight'] = None  \n",
-    "# data2_sss.info['subject_info']['height'] = None\n",
-    "data2_sss.save(deriv_file_2, overwrite=True)"
+    "\n",
+    "raw2_sss.save(deriv_file_2, overwrite=True)"
    ]
   },
   {
