ran through artefactannotation, working on ica

--- a/MNEPython/ICA.ipynb
+++ b/MNEPython/ICA.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,8 +37,8 @@
     "### File overview\n",
     "The chapter relies on the input file (embedded in the BIDS structure):\n",
     "~~~\n",
-    "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
-    "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_raw_sss.fif\n",
+    "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_ann.fif\n",
+    "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_raw_ann.fif\n",
     "~~~\n",
     "and generates the output files\n",
     "~~~\n",
@@ -56,15 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
-      "/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n"
+      "/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif\n",
+      "/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n"
      ]
     }
    ],
@@ -76,16 +76,15 @@
     "meg_suffix = 'meg'\n",
     "ann_suffix = 'ann'\n",
     "ica_suffix = 'ica'\n",
-    "max_suffix = 'raw_sss'\n",
+    "ann_suffix = 'ann'\n",
     "\n",
-    "#deriv_root = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing'\n",
-    "deriv_root = '/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing'\n",
+    "deriv_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing'\n",
     "\n",
     "bids_path = BIDSPath(subject=subject, session=session, datatype='meg',\n",
-    "            task=task, run=run, suffix=max_suffix, \n",
+    "            task=task, run=run, suffix=ann_suffix, \n",
     "            root=deriv_root, extension='.fif', check=False)\n",
     "\n",
-    "deriv_fname = bids_path.basename.replace(max_suffix, ica_suffix)\n",
+    "deriv_fname = bids_path.basename.replace(ann_suffix, ica_suffix)\n",
     "deriv_file_1 = op.join(bids_path.directory, deriv_fname)\n",
     "deriv_file_2 = deriv_file_1.replace('run-01', 'run-02')\n",
     "deriv_files = [deriv_file_1, deriv_file_2]  \n",
@@ -104,14 +103,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file /Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif...\n",
+      "Opening raw data file /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  raw = read_raw_bids(bids_path=bids_path,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "    Range : 208000 ... 1664999 =    208.000 ...  1664.999 secs\n",
       "Ready.\n",
       "Reading 0 ... 1456999  =      0.000 ...  1456.999 secs...\n"
@@ -121,19 +134,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_29992/3237970853.py:2: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_29992/3237970853.py:2: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_29992/3237970853.py:2: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_29992/3237970853.py:2: RuntimeWarning: participants.tsv file not found for /Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_sss.fif\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n"
      ]
     },
@@ -162,22 +175,24 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.4s\n"
+      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.3s\n",
+      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.8s\n",
+      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    1.4s\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file /Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_raw_sss.fif...\n"
+      "Opening raw data file /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif...\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.8s\n"
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  raw = read_raw_bids(bids_path=bids_path,\n"
      ]
     },
     {
@@ -193,19 +208,19 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_29992/3237970853.py:2: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_29992/3237970853.py:2: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_29992/3237970853.py:2: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-02.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-02.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_29992/3237970853.py:2: RuntimeWarning: participants.tsv file not found for /Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_raw_sss.fif\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_57986/3233175073.py:2: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif\n",
       "  raw = read_raw_bids(bids_path=bids_path,\n"
      ]
     },
@@ -234,21 +249,21 @@
      "output_type": "stream",
      "text": [
       "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.2s\n",
-      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    0.8s\n"
+      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    1.0s\n",
+      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    1.7s\n"
      ]
     }
    ],
    "source": [
-    "for subfile in range(1, 3):\n",
+    "for subfile in range(2):\n",
     "    raw = read_raw_bids(bids_path=bids_path, \n",
     "                     extra_params={'preload':True},\n",
     "                     verbose=True)\n",
     "    raw_resmpl = raw.copy().pick('meg')\n",
     "    raw_resmpl.resample(200) # dowsample to 200 Hz\n",
     "    raw_resmpl.filter(1, 40) # band-pass filtert from 1 to 40 Hz\n",
-    "    if subfile == 1:\n",
+    "    if subfile == 0:\n",
     "        raw_resmpl_all = mne.io.concatenate_raws([raw_resmpl])\n",
     "        bids_path.update(run='02')\n",
     "    else:\n",
@@ -266,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -274,8 +289,9 @@
      "output_type": "stream",
      "text": [
       "Fitting ICA to data using 306 channels (please be patient, this may take a while)\n",
+      "Omitting 19832 of 578200 (3.43%) samples, retaining 558368 (96.57%) samples.\n",
       "Selecting by number: 30 components\n",
-      "Fitting ICA took 18.3s.\n"
+      "Fitting ICA took 20.7s.\n"
      ]
     },
     {
@@ -292,7 +308,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "        <th>Fit</th>\n",
-       "        <td>73 iterations on raw data (578200 samples)</td>\n",
+       "        <td>48 iterations on raw data (558368 samples)</td>\n",
        "    </tr>\n",
        "    \n",
        "    <tr>\n",
@@ -315,10 +331,10 @@
        "</table>"
       ],
       "text/plain": [
-       "<ICA | raw data decomposition, method: fastica (fit in 73 iterations on 578200 samples), 30 ICA components (306 PCA components available), channel types: mag, grad, no sources marked for exclusion>"
+       "<ICA | raw data decomposition, method: fastica (fit in 48 iterations on 558368 samples), 30 ICA components (306 PCA components available), channel types: mag, grad, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,13 +353,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Identifying the ICA components reflecting the artifacts\n",
+    "### Identifying the ICA components reflecting the artefacts\n",
     "To plot the examples for the time-traces of the ICA components use:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -360,54 +376,15 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x29f380280>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x312bb0dc0>"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "%matplotlib inline\n",
-    "ica.plot_sources(raw_resmpl_all, title='ICA')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "To open the interactive version of the plot, run:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Creating RawArray with float64 data, n_channels=30, n_times=578200\n",
-      "    Range : 41600 ... 619799 =    208.000 ...  3098.995 secs\n",
-      "Ready.\n",
-      "Using pyopengl with version 3.1.6\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x2a2291fc0>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%matplotlib qt\n",
     "ica.plot_sources(raw_resmpl_all, title='ICA')"
    ]
   },
@@ -467,7 +444,7 @@
    ],
    "source": [
     "%matplotlib inline\n",
-    "ica.plot_components()"
+    "ica.plot_components();"
    ]
   },
   {
@@ -606,8 +583,8 @@
     "ica.exclude = [0, 1, 11, 22]\n",
     "\n",
     "# Loop over the subfiles\n",
-    "for subfile in range(1, 3):\n",
-    "    if subfile == 2:\n",
+    "for subfile in range(2):\n",
+    "    if subfile == 1:\n",
     "        bids_path.update(run='02')\n",
     "\n",
     "    raw_ica = read_raw_bids(bids_path=bids_path,\n",
@@ -615,7 +592,7 @@
     "                     verbose=True)\n",
     "    ica.apply(raw_ica)\n",
     "\n",
-    "    raw_ica.save(deriv_files[subfile-1], overwrite=True)"
+    "    raw_ica.save(deriv_files[subfile], overwrite=True)"
    ]
   },
   {
@@ -757,7 +734,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
