--- a/MNEPython/ICA.ipynb
+++ b/MNEPython/ICA.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Using ICA to reduce artefacts\n",
     "\n",
-    "This section will show how to use an independent component analysis (ICA) approach to suppress ocular and cardiac artifacts. This will be done by first performing an ICA decomposition of the data after which the components reflecting the artifacts are identified manually. As a last step the artifact components are 'projected out'.\n",
+    "This section will show how to use an independent component analysis (ICA) approach to suppress ocular and cardiac artefacts. This will be done by first performing an ICA decomposition of the data after which the components reflecting the artefacts are identified manually. As a last step the artefact components are 'projected out'.\n",
     "\n",
     "## Preparation\n",
     "\n",
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,12 +35,12 @@
    "metadata": {},
    "source": [
     "### File overview\n",
-    "The chapter relies on the input file (embedded in the BIDS structure):\n",
+    "The chapter relies on the input files (embedded in the BIDS structure):\n",
     "~~~\n",
     "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_raw_ann.fif\n",
     "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_raw_ann.fif\n",
     "~~~\n",
-    "and generates the output files\n",
+    "and generates the output files:\n",
     "~~~\n",
     "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n",
     "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ica.fif\n",
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -174,10 +174,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.3s\n",
-      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.8s\n",
-      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    1.4s\n"
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.5s\n",
+      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    0.9s\n",
+      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    1.5s\n"
      ]
     },
     {
@@ -248,10 +248,10 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.1s\n",
-      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.5s\n",
-      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    1.0s\n",
-      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    1.7s\n"
+      "[Parallel(n_jobs=1)]: Done  17 tasks      | elapsed:    0.2s\n",
+      "[Parallel(n_jobs=1)]: Done  71 tasks      | elapsed:    0.6s\n",
+      "[Parallel(n_jobs=1)]: Done 161 tasks      | elapsed:    1.1s\n",
+      "[Parallel(n_jobs=1)]: Done 287 tasks      | elapsed:    1.9s\n"
      ]
     }
    ],
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -291,7 +291,7 @@
       "Fitting ICA to data using 306 channels (please be patient, this may take a while)\n",
       "Omitting 19832 of 578200 (3.43%) samples, retaining 558368 (96.57%) samples.\n",
       "Selecting by number: 30 components\n",
-      "Fitting ICA took 20.7s.\n"
+      "Fitting ICA took 23.3s.\n"
      ]
     },
     {
@@ -334,7 +334,7 @@
        "<ICA | raw data decomposition, method: fastica (fit in 48 iterations on 558368 samples), 30 ICA components (306 PCA components available), channel types: mag, grad, no sources marked for exclusion>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -369,17 +369,16 @@
       "Creating RawArray with float64 data, n_channels=30, n_times=578200\n",
       "    Range : 41600 ... 619799 =    208.000 ...  3098.995 secs\n",
       "Ready.\n",
-      "Using qt as 2D backend.\n",
       "Using pyopengl with version 3.1.6\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x312bb0dc0>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x178412290>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +395,7 @@
     "\n",
     "\n",
     "When inspecting the traces, it is clear that ICA000 and ICA001 reflect eye-blinks as measured most strongly. Component ICA014 reflects saccades. Finally, ICA024 reflects the ECG.\n",
-    "This order of ICA components is specific to this data set and the seed (*random_state*) used for the ICA decomposition. For other data sets or using a different seed the components will come in a different order. Therefore the components associated with artifacts have to be identified manually.\n",
+    "This order of ICA components is specific to this data set and the seed (*random_state*) used for the ICA decomposition. For other data sets or using a different seed the components will come in a different order. Therefore the components associated with artefacts have to be identified manually.\n",
     "\n",
     "**Question 1:** Estimate the frequency of the heart rate\n",
     "\n",
@@ -408,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -441,20 +440,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These plots show the topography associated with the magnetometers as they are more straightforward to interpret. The topography of ICA000 and ICA001 look like a classical eye-blink artifacts with strong activity over frontal left and right sensors of opposite polarity. The frontal negativity of ICA011 is associated with saccades. ICA022 looks like a typical ECG artifact as observed by the strong activity in the rim sensors stemming from the magnetic field circling the heart.\n",
+    "These plots show the topography associated with the magnetometers as they are more straightforward to interpret. The topography of ICA000 and ICA001 look like a classical eye-blink artefacts with strong activity over frontal left and right sensors of opposite polarity. The frontal negativity of ICA011 is associated with saccades. ICA022 looks like a typical ECG artefact as observed by the strong activity in the rim sensors stemming from the magnetic field circling the heart.\n",
     "\n",
-    "How many components should in general be removed? As a rule of thumb not more than a handful. Typically only remove components which clearly reflect a physiological artifact. Removing too many components might remove brain activity as well.\n",
+    "How many components should in general be removed? As a rule of thumb not more than a handful. Typically only remove components which clearly reflect a physiological artefact. Removing too many components might remove brain activity as well.\n",
     "\n",
     "**Question 3:** Which component(s) might reflect the human alpha band activity? Base your argument both on the traces and topographies.\n",
     "\n",
     "\n",
     "### Attenuating  the artefacts by applying the projections\n",
-    "Now that we have detected the ICA components associated with ocular and cardiac artifacts, we have to 'project out' them. This will be done by applying the ICA projections generated by *ica.exclude* to the original raw data which will be loaded again by looping over the sub-files. After the ICA projections have been applied (*ica.apply*) the data will be saved."
+    "Now that we have detected the ICA components associated with ocular and cardiac artefacts, we have to 'project out' them. This will be done by applying the ICA projections generated by *ica.exclude* to the original raw data which will be loaded again by looping over the sub-files. After the ICA projections have been applied (*ica.apply*) the data will be saved."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -509,6 +508,7 @@
       "    Transforming to ICA space (30 components)\n",
       "    Zeroing out 4 ICA components\n",
       "    Projecting back using 306 PCA components\n",
+      "Overwriting existing file.\n",
       "Writing /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n"
      ]
     },
@@ -574,6 +574,7 @@
       "    Transforming to ICA space (30 components)\n",
       "    Zeroing out 4 ICA components\n",
       "    Projecting back using 306 PCA components\n",
+      "Overwriting existing file.\n",
       "Writing /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ica.fif\n"
      ]
     },
@@ -615,16 +616,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Plotting the data to check the artifact reduction\n",
+    "## Plotting the data to check the artefact reduction\n",
     "\n",
-    "We will here examine some of the traces from one of the subfiles (#1) to demonstrate the artifact reduction.\n",
+    "We will here examine some of the traces from one of the subfiles (#1) to demonstrate the artefact reduction.\n",
     "\n",
     "Define a few frontal magnetometers to examine and include the EOG sensors:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -636,12 +637,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then plot the data prior to the ICA projections were applied. Use the arrow button to scroll through the trials."
+    "Then plot the data before the ICA projections were applied. Use the arrow button to scroll through the trials."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -654,12 +655,22 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x1109edcf0>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x110bebeb0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Channels marked as bad:\n",
+      "none\n",
+      "Channels marked as bad:\n",
+      "none\n"
+     ]
     }
    ],
    "source": [
@@ -670,14 +681,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above shows the raw traces prior to the application of the ICA projections. Note the ocular artifacts in the MEG data at e.g. ~1 sec.\n",
+    "The plot above shows the raw traces before the application of the ICA projections. Note the ocular artefacts in the MEG data at e.g. ~1 sec.\n",
     "\n",
     "Then plot the same traces after the application of the ICA projections:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {
     "scrolled": true
    },
@@ -692,10 +703,10 @@
     {
      "data": {
       "text/plain": [
-       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x333fbbe20>"
+       "<mne_qt_browser._pg_figure.MNEQtBrowser at 0x113760160>"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +719,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As seen in the plot above, the ocular artifacts are clearly reduced."
+    "As seen in the plot above, the ocular artefacts are clearly reduced."
    ]
   },
   {
@@ -717,8 +728,8 @@
    "source": [
     "## Preregistration and publication\n",
     "\n",
-    "Example text \n",
-    "\"The data were down sampled to 200Hz prior to Independent Component Analysis (ICA) and bandpass filtered at 1 – 40 Hz. Next the fastICA algorithm  (Hyvärinen and Oja, 2000) was applied to the segmented data as implemented in MNE Python. Clear components containing cardiac artefacts and eyeblinks (identified in time course and topographies of the ICA components) were removed in each subject (3 – 5 over subjects) in the raw unfiltered data. \"\n",
+    "Example text:  \n",
+    "\"The data were down sampled to 200 Hz prior to Independent Component Analysis (ICA) and bandpass filtered at 1 – 40 Hz. Next the fastICA algorithm  (Hyvärinen and Oja, 2000) was applied to the segmented data as implemented in MNE Python. Components containing cardiac artefacts and eyeblinks (identified in time course and topographies of the ICA components) were removed in each subject (3 – 5 over subjects) in the raw unfiltered data. \"\n",
     "\n"
    ]
   },
