--- a/MNEPython/Conditions.ipynb
+++ b/MNEPython/Conditions.ipynb
@@ -17,7 +17,22 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/2713253147.py:4: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import os.path as op\n",
     "import os\n",
@@ -40,8 +55,8 @@
     "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n",
     "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ica.fif\n",
     "\n",
-    "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.csv\n",
-    "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.csv\n",
+    "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif\n",
+    "<BIDS_ROOT>/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-02_ann.fif\n",
     "~~~\n",
     "and generates the output files\n",
     "~~~\n",
@@ -65,7 +80,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.csv\n"
+      "/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ann.fif\n"
      ]
     }
    ],
@@ -79,12 +94,8 @@
     "ann_suffix = 'ann'\n",
     "epo_suffix = 'epo'\n",
     "\n",
-    "\n",
-    "#preproc_root = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Preprocessing'\n",
-    "#deriv_root = r'C:\\Users\\parkh\\MEG Dropbox\\Hyojin Park\\FLUX\\derivatives\\Analysis'\n",
-    "\n",
-    "preproc_root = '/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing'\n",
-    "deriv_root =   '/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Analysis'\n",
+    "preproc_root = '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing'\n",
+    "deriv_root =   '/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/analysis'\n",
     "\n",
     "bids_path_preproc = BIDSPath(subject=subject, session=session,\n",
     "            task=task, run=run, suffix=ica_suffix, datatype='meg',\n",
@@ -95,19 +106,31 @@
     "            root=deriv_root, extension='.fif', check=False).mkdir()\n",
     "\n",
     "ann_fname = bids_path_preproc.basename.replace(ica_suffix, ann_suffix) # output filename\n",
-    "ann_fname = ann_fname.replace('fif', 'csv') # output filename\n",
     "\n",
     "ann_fname_1 = op.join(bids_path_preproc.directory, ann_fname)\n",
     "ann_fname_2 = ann_fname_1.replace('run-01', 'run-02')\n",
-    "\n",
-    "\n",
-    "#print(bids_path_preproc.basename, bids_path_preproc.fpath)\n",
-    "#print(bids_path.basename, bids_path.fpath)\n",
     "\n",
     "deriv_file = bids_path.basename.replace('run-01', 'run-12')  # run 12 -> run 01 concatenated with run 02\n",
     "deriv_fname = op.join(bids_path.directory, deriv_file)\n",
     "\n",
     "print(ann_fname_1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sub-01_ses-01_task-SpAtt_run-01_ica.fif\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(bids_path_preproc.basename)"
    ]
   },
   {
@@ -127,7 +150,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Opening raw data file /Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif...\n",
+      "Opening raw data file /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/3062268747.py:3: RuntimeWarning: This filename (/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
+      "  raw = read_raw_bids(bids_path=bids_path_preproc,\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "    Range : 1665000 ... 3098999 =   1665.000 ...  3098.999 secs\n",
       "Ready.\n"
      ]
@@ -136,27 +173,25 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_31228/3062268747.py:3: RuntimeWarning: This filename (/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif) does not conform to MNE naming conventions. All raw files should end with raw.fif, raw_sss.fif, raw_tsss.fif, _meg.fif, _eeg.fif, _ieeg.fif, raw.fif.gz, raw_sss.fif.gz, raw_tsss.fif.gz, _meg.fif.gz, _eeg.fif.gz or _ieeg.fif.gz\n",
-      "  raw = read_raw_bids(bids_path=bids_path_preproc,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_31228/3062268747.py:3: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/3062268747.py:3: RuntimeWarning: Did not find any events.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*events.tsv\"\n",
       "  raw = read_raw_bids(bids_path=bids_path_preproc,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_31228/3062268747.py:3: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/3062268747.py:3: RuntimeWarning: Did not find any channels.tsv associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*channels.tsv\"\n",
       "  raw = read_raw_bids(bids_path=bids_path_preproc,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_31228/3062268747.py:3: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/3062268747.py:3: RuntimeWarning: Did not find any meg.json associated with sub-01_ses-01_task-SpAtt_run-01.\n",
       "\n",
-      "The search_str was \"/Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
+      "The search_str was \"/Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/**/meg/sub-01_ses-01*meg.json\"\n",
       "  raw = read_raw_bids(bids_path=bids_path_preproc,\n",
-      "/var/folders/n0/w7vb4jpn0nx3hs95f4p7r9br0000gr/T/ipykernel_31228/3062268747.py:3: RuntimeWarning: participants.tsv file not found for /Users/o.jensen@bham.ac.uk/Python/FLUX/Data/ds004346/derivatives/Preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n",
+      "/var/folders/hd/b_5m7wh54rv2hb3s09qyc3r40000gs/T/ipykernel_59345/3062268747.py:3: RuntimeWarning: participants.tsv file not found for /Volumes/jenseno-avtemporal-attention/Projects/FLUX/data/derivatives/preprocessing/sub-01/ses-01/meg/sub-01_ses-01_task-SpAtt_run-01_ica.fif\n",
       "  raw = read_raw_bids(bids_path=bids_path_preproc,\n"
      ]
     }
    ],
    "source": [
-    "# This section only runs on run=01 for illustration purpose \n",
+    "# This section only runs on run=01 for illustration purposes\n",
     "bids_path_preproc.update(run='01')\n",
     "raw = read_raw_bids(bids_path=bids_path_preproc, \n",
     "            extra_params={'preload':False},\n",
@@ -170,15 +205,22 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Used Annotations descriptions: ['ITI', 'block_start', 'cue_left', 'cue_right', 'left_resp_maybe', 'right_resp_maybe', 'target_onset', 'trial_end', 'trial_start']\n"
+     "ename": "ValueError",
+     "evalue": "Could not find any of the events you specified.",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[4], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m# Reading the events from the  raw file\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m events, events_id \u001b[38;5;241m=\u001b[39m \u001b[43mmne\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mevents_from_annotations\u001b[49m\u001b[43m(\u001b[49m\u001b[43mraw\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevent_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mauto\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m)\u001b[49m\n",
+      "File \u001b[0;32m<decorator-gen-39>:12\u001b[0m, in \u001b[0;36mevents_from_annotations\u001b[0;34m(raw, event_id, regexp, use_rounding, chunk_duration, verbose)\u001b[0m\n",
+      "File \u001b[0;32m~/miniconda3/envs/mne/lib/python3.11/site-packages/mne/annotations.py:1596\u001b[0m, in \u001b[0;36mevents_from_annotations\u001b[0;34m(raw, event_id, regexp, use_rounding, chunk_duration, verbose)\u001b[0m\n\u001b[1;32m   1592\u001b[0m annotations \u001b[38;5;241m=\u001b[39m raw\u001b[38;5;241m.\u001b[39mannotations\n\u001b[1;32m   1594\u001b[0m event_id \u001b[38;5;241m=\u001b[39m _check_event_id(event_id, raw)\n\u001b[0;32m-> 1596\u001b[0m event_sel, event_id_ \u001b[38;5;241m=\u001b[39m \u001b[43m_select_annotations_based_on_description\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m   1597\u001b[0m \u001b[43m    \u001b[49m\u001b[43mannotations\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mdescription\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mevent_id\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mevent_id\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mregexp\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mregexp\u001b[49m\n\u001b[1;32m   1598\u001b[0m \u001b[43m\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m   1600\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m chunk_duration \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m   1601\u001b[0m     inds \u001b[38;5;241m=\u001b[39m raw\u001b[38;5;241m.\u001b[39mtime_as_index(\n\u001b[1;32m   1602\u001b[0m         annotations\u001b[38;5;241m.\u001b[39monset, use_rounding\u001b[38;5;241m=\u001b[39muse_rounding, origin\u001b[38;5;241m=\u001b[39mannotations\u001b[38;5;241m.\u001b[39morig_time\n\u001b[1;32m   1603\u001b[0m     )\n",
+      "File \u001b[0;32m~/miniconda3/envs/mne/lib/python3.11/site-packages/mne/annotations.py:1440\u001b[0m, in \u001b[0;36m_select_annotations_based_on_description\u001b[0;34m(descriptions, event_id, regexp)\u001b[0m\n\u001b[1;32m   1437\u001b[0m event_sel \u001b[38;5;241m=\u001b[39m [ii \u001b[38;5;28;01mfor\u001b[39;00m ii, kk \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28menumerate\u001b[39m(descriptions) \u001b[38;5;28;01mif\u001b[39;00m kk \u001b[38;5;129;01min\u001b[39;00m event_id_]\n\u001b[1;32m   1439\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(event_sel) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m \u001b[38;5;129;01mand\u001b[39;00m regexp \u001b[38;5;129;01mis\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[0;32m-> 1440\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mCould not find any of the events you specified.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m   1442\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m event_sel, event_id_\n",
+      "\u001b[0;31mValueError\u001b[0m: Could not find any of the events you specified."
      ]
     }
    ],
    "source": [
-    "# Reading the events from the  raw file\n",
+    "# Reading the events from the raw file\n",
     "events, events_id = mne.events_from_annotations(raw, event_id='auto')"
    ]
   },
@@ -186,7 +228,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now read the artifact annocations:"
+    "Now read the artefact annocations:"
    ]
   },
   {
@@ -714,7 +756,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A few percent of the trials were rejected due to MEG artifacts in the magnetometers."
+    "A few percent of the trials were rejected due to MEG artefacts in the magnetometers."
    ]
   },
   {
@@ -998,7 +1040,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.7"
   },
   "vscode": {
    "interpreter": {
